--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script id="business_id" src="./test.js">vorsprung durch technik</script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -28,7 +29,58 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
+    <h1>React App</h1>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
