Changed the Links to CDn links

--- a/test.html
+++ b/test.html
@@ -59,7 +59,7 @@
    <h1>This is a test site for checking the chat bot widget in a third-party website</h1>
    <h1>This is a test site for checking the chat bot widget in a third-party website</h1>
    <!-- <script src="https://cdn.jsdelivr.net/gh/siddhrajcrest/chatbot/test.js"> </script> -->
-   <script id="business_id" src="./test.js">vorsprung durch technik</script>
+   <script id="business_id" src="https://cdn.jsdelivr.net/gh/siddhrajcrest/chatbotnew/test.js">vorsprung durch technik</script>
     <!-- <script
       src="https://unpkg.com/react@16.13.1/umd/react.production.min.js"
       crossorigin
