--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script id="business_id" src="./test.js">vorsprung durch technik</script>
+    <script id="business_id" src="./test.js">
+      1234
+    </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -29,58 +31,66 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
-    <h1>React App</h1>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
+    <p>Hello</p>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
